[feature/oneToOneChat] 채팅 목록 응답 결과 수정.